# logic-assignment

./: .gitattributes  .gitignore  .harper-dictionary.txt  README.md  TPTP Language.html  tptp_problem_subset.txt  tptp_problem_subset2.txt
AI_generated/: README.md  easy.p  easy_11.p  easy_16.p  easy_17.p  easy_19.p  easy_21.p  easy_22.p  easy_24.p  easy_26.p  easy_3.p  easy_5.p  easy_6.p  easy_7.p  easy_8.p  expert.p  expert_13.p  expert_16.p  expert_17.p  expert_19.p  expert_2.p  expert_21.p  expert_22.p  expert_23.p  expert_25.p  expert_30.p  expert_31.p  expert_32.p  expert_34.p  expert_36.p  expert_38.p  expert_39.p  expert_4.p  expert_43.p  expert_47.p  expert_48.p  expert_49.p  expert_5.p  expert_50.p  expert_6.p  (+47 more)
FOLIO/: README.md  folio-predictions.tsv  folio-summary.tsv  pyproject.toml
FOLIO/folio/: __main__.py  cli.py  dataset.py  db.py  evaluate.py  export.py  folio-predictions.tsv  folio-results.db  folio-summary.tsv  formula.py  prover.py
FOLIO/folio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
FOLIO/tests/: test_db.py  test_evaluate.py  test_export.py  test_formula.py
analysis/: analysis.py  analysis_core.py  analysis_plots.py  analysis_report.py  analysis_runner.py  bushy-results copy.db  check_db.py  check_ratings.py  generated-results.db  migrate_add_problem_class.py  notebook.ipynb  tptp-unprovable-results.db
generated-tests/: easy_1.p  easy_10.p  easy_12.p  easy_13.p  easy_14.p  easy_15.p  easy_18.p  easy_2.p  easy_20.p  easy_23.p  easy_31.p  easy_32.p  easy_4.p  expert_1.p  expert_10.p  expert_11.p  expert_12.p  expert_14.p  expert_15.p  (+87 more)
(+165 files in other folders)
