[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "folio"
version = "0.1.0"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
folio = "folio.cli:main"

[tool.setuptools.packages.find]
include = ["folio*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
